Drop pyramid_deform and horus HTML views
Close #1552

--- a/development.ini
+++ b/development.ini
@@ -9,8 +9,10 @@ es.host: http://localhost:9200
 horus.allow_email_auth: True
 horus.autologin: True
 horus.require_activation: False
-horus.login_redirect: /
-horus.logout_redirect: /
+
+horus.login_redirect: stream
+horus.logout_redirect: login
+horus.activate_redirect: stream
 
 multiauth.policies: h.auth.local h.api
 
@@ -20,13 +22,8 @@ pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
     pyramid_debugtoolbar
-    pyramid_deform
     pyramid_mailer
     h.testing
-
-pyramid_deform.template_search_path:
-    h:templates/deform
-    deform_bootstrap:templates
 
 sqlalchemy.url: sqlite:///h.db
 
