--- a/production.ini
+++ b/production.ini
@@ -39,10 +39,10 @@ api.key: 00000000-0000-0000-0000-000000000000
 
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
-horus.login_redirect: /
-horus.logout_redirect: /
-#horus.activate_redirect: /
-#horus.register_redirect: /
+horus.login_redirect: stream
+horus.logout_redirect: login
+horus.activate_redirect: login
+
 #horus.autologin: False
 #horus.allow_email_auth: False
 #horus.require_activation: True
@@ -57,14 +57,8 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
-    pyramid_deform
     pyramid_mailer
     pyramid_redis_sessions
-
-# Change or append to override templates
-pyramid_deform.template_search_path:
-    h:templates/deform
-    deform_bootstrap:templates
 
 # Redis session configuration -- See pyramid_redis_sessions documentation
 # The session secret must be set by providing a 128 character long secrete here
