Create reply-notification for newly registered users
This reply-notification-template will be used for the notifier to send replies,
and can be activated/deactivated

--- a/development.ini
+++ b/development.ini
@@ -13,7 +13,7 @@ horus.login_redirect: stream
 horus.logout_redirect: login
 horus.activate_redirect: stream
 
-multiauth.policies: h.api h.auth.local
+multiauth.policies: h.notification h.api h.auth.local
 
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
