--- a/production.ini
+++ b/production.ini
@@ -33,7 +33,7 @@ horus.activate_redirect: login
 #horus.require_activation: True
 
 # Authorization settings -- see pyramid_multiauth documentation
-multiauth.policies: h.auth.local h.api
+multiauth.policies: h.auth.local h.notification h.api
 
 # Mail server configuration -- see the pyramid_mailer documentation
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
