Pin sass install to work around sass/sass#1476
sass==3.4.6 has introduced a regression in the parsing of
pseudo-selectors such as

    :not(:focus)

which breaks our build. We need to temporarily pin to 3.4.5 to avoid
spurious build errors all over the place.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ language:
 python:
   - '2.7'
 install:
-  - gem install sass
+  # Install temporarily pinned to avoid a regression in sass==3.4.6
+  #
+  #   https://github.com/sass/sass/issues/1476
+  - gem install sass:3.4.5
   - gem install compass
   - make
 services:
