Add reload and graceful timeout to development.ini

--- a/development.ini
+++ b/development.ini
@@ -45,7 +45,9 @@ use: egg:gunicorn
 host: localhost
 port: 5000
 worker_class: gevent
+graceful_timeout: 0
 log_file: -
+reload: True
 
 
 [loggers]
