Cookies last 30 days
Sessions last only a week, but if you visit again they should refresh.
The cookie will last a month before you have to log in again.

--- a/production.ini
+++ b/production.ini
@@ -65,6 +65,7 @@ pyramid.includes:
 # or in the SESSION_SECRET environment variable. Without this, the application
 # will not start.
 #redis.sessions.secret:
+redis.sessions.cookie_max_age: 2592000
 redis.sessions.timeout: 604800
 
 # SQLAlchemy configuration -- See SQLAlchemy documentation
