--- a/production.ini
+++ b/production.ini
@@ -81,6 +81,9 @@ webassets.base_url: assets
 webassets.cache_max_age: 86400
 webassets.coffee_no_bare: True
 webassets.static_view: True
+webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
+webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
+webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
 
 
 [server:main]
