--- a/production.ini
+++ b/production.ini
@@ -93,6 +93,7 @@ webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
 [server:main]
 use: egg:gunicorn
 worker_class: gevent
+workers: 3
 
 
 [loggers]
