Refactor includes to make all the models
Rather than putting the notifications module into the multiauth
configuration, which was a nasty hack to get it to load early,
remove the automatic inclusion of pyramid_basemodel and put it into
the load order after h in `pyramid.includes`. That gives multiauth
time to include the local account and its models before the
pyramid_basemodel is included (at which point the models are actually
created).

--- a/development.ini
+++ b/development.ini
@@ -13,7 +13,7 @@ horus.login_redirect: stream
 horus.logout_redirect: login
 horus.activate_redirect: stream
 
-multiauth.policies: h.notification h.api h.auth.local
+multiauth.policies: h.auth.local h.api
 
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
@@ -21,8 +21,11 @@ pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
     pyramid_jinja2
+    h
+    pyramid_basemodel
     pyramid_debugtoolbar
     pyramid_mailer
+    pyramid_tm
     h.testing
 
 sqlalchemy.url: sqlite:///h.db
