--- a/production.ini
+++ b/production.ini
@@ -33,7 +33,7 @@ horus.activate_redirect: login
 #horus.require_activation: True
 
 # Authorization settings -- see pyramid_multiauth documentation
-multiauth.policies: h.auth.local h.notification h.api
+multiauth.policies: h.auth.local h.api
 
 # Mail server configuration -- see the pyramid_mailer documentation
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
@@ -42,8 +42,11 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
+    h
+    pyramid_basemodel
     pyramid_mailer
     pyramid_redis_sessions
+    pyramid_tm
 
 # Redis session configuration -- See pyramid_redis_sessions documentation
 # The session secret must be set by providing a 128 character long secrete here
