Add Jinja2 as the project templating language

--- a/development.ini
+++ b/development.ini
@@ -21,6 +21,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
+    pyramid_jinja2
     pyramid_debugtoolbar
     pyramid_mailer
     h.testing
