Add a include_raw Jinja extension
This allows us to include raw files directly into templates without
them going through the Jinja processor.

--- a/development.ini
+++ b/development.ini
@@ -28,6 +28,10 @@ pyramid.includes:
 
 sqlalchemy.url: sqlite:///h.db
 
+jinja2.trim_blocks: true
+jinja2.lstrip_blocks: true
+jinja2.extensions: h.jinja_extensions:IncludeRawExtension
+
 webassets.base_dir: h:static
 webassets.base_url: assets
 webassets.coffee_no_bare: True
