Remove last traces of chameleon
The Chrome extension build still required chameleon, a dependency
removed by 81ce4b1.

This commit removes the last traces of chameleon (from the extension
builder and the views file) and thus fixes the Chrome build for new
checkouts.

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Hypothes.is",
-  "version": "${version}",
+  "version": "{{ version }}",
   "manifest_version": 2,
 
   "description": "The Internet, peer reviewed.",
@@ -21,7 +21,7 @@
     "tabs"
   ],
   "content_security_policy":
-    "script-src 'self' 'unsafe-eval' ${src}; object-src 'self'",
+    "script-src 'self' 'unsafe-eval' {{ src }}; object-src 'self'",
 
   "background": {
     "persistent": true,
