--- a/h/browser/firefox/package.json
+++ b/h/browser/firefox/package.json
@@ -2,7 +2,7 @@
   "name": "hypothesis",
   "title": "hypothes.is",
   "id": "firefox@hypothes.is",
-  "description": "Annotate, highlight, and comment on anything on the Web.",
+  "description": "Annotate, highlight, and discuss anything on the Web.",
   "author": "hypothes.is",
   "license": "BSD",
   "version": "0.2.1"
