Use prospector for static analysis rather than flake8
Prospector is a cover-all static analysis tool that runs the same tools
as flake8, plus a number of others including pylint.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ install:
   #   https://github.com/sass/sass/issues/1476
   - gem install sass:3.4.5
   - gem install compass
-  - pip install flake8 pep8-naming
+  - pip install prospector
   - make
 services:
   - elasticsearch
 script:
   - make test
-  - flake8 h --exclude='_version.py,*_test.py'
+  - prospector -P .prospector.yaml h
   # Build Chrome extension
   - hypothesis extension development.ini http://localhost
 notifications:
