streamer: Put streamer behind a feature flag
Only enable the "realtime" features if the "streamer" feature flag is
enabled.

--- a/development.ini
+++ b/development.ini
@@ -5,6 +5,8 @@ api.key: 00000000-0000-0000-0000-000000000000
 
 es.host: http://localhost:9200
 
+h.feature.streamer: True
+
 horus.allow_email_auth: True
 horus.autologin: True
 horus.require_activation: False
