--- a/production.ini
+++ b/production.ini
@@ -22,6 +22,9 @@ api.key: 00000000-0000-0000-0000-000000000000
 #es.host: http://localhost:9200
 #es.index: annotator
 
+# Feature flags
+h.feature.streamer = False
+
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
 horus.login_redirect: stream
