Use jquery.min.js downloaded from jQuery.com
Mozilla Addons Editors check sums (sha256sum fwiw) against
a list of frequently used libraries http://mzl.la/amo-libs

Ours did not match because we uglified it all by ourselves.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -145,10 +145,8 @@ angular_tags_input:
 
 # jQuery
 jquery:
-  filters: uglifyjs
-  output: scripts/vendor/jquery.min.js
   contents:
-    - h:static/scripts/vendor/jquery-1.10.2.js
+    - h:static/scripts/vendor/jquery.min.js
 jquery_scrollintoview:
   filters: uglifyjs
   output: scripts/vendor/jquery.scrollintoview.min.js
