Improve logging in development
This commit reduces the verbosity of logging in development, and
standardises the log format so there's only one place to update it.

Many of these changes were made to production.ini in 39046680a, but were
never ported to development.ini.

--- a/development.ini
+++ b/development.ini
@@ -52,12 +52,12 @@ host: localhost
 port: 5000
 worker_class: gevent
 graceful_timeout: 0
-log_file: -
+errorlog: -
 reload: True
 
 
 [loggers]
-keys = root, gunicorn.error, alembic, h, sqlalchemy
+keys = root, gunicorn.error, h
 
 
 [handlers]
@@ -69,7 +69,6 @@ keys = generic
 
 
 [logger_root]
-level = INFO
 handlers = console
 
 
@@ -83,18 +82,6 @@ qualname = gunicorn.error
 level = DEBUG
 handlers =
 qualname = h
-
-
-[logger_sqlalchemy]
-level = INFO
-handlers =
-qualname = sqlalchemy.engine
-
-
-[logger_alembic]
-level = INFO
-handlers =
-qualname = alembic
 
 
 [handler_console]
