Add TabErrorCache to the chrome extension
This is really just a wrapper around an Object to let us easily
test the error handling code.

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -28,8 +28,11 @@
     "scripts": [
       "lib/tab-store.js",
       "lib/tab-state.js",
+      "lib/tab-error-cache.js",
       "lib/sidebar-injector.js",
       "lib/browser-action.js",
+      "lib/help-page.js",
+      "lib/errors.js",
       "lib/hypothesis-chrome-extension.js",
       "background.js"
     ]
