Include logger name in log format

--- a/production.ini
+++ b/production.ini
@@ -119,4 +119,4 @@ formatter = generic
 
 
 [formatter_generic]
-format = %(asctime)s [%(process)d] [%(levelname)s] %(message)s
+format = %(asctime)s [%(process)d] [%(name)s:%(levelname)s] %(message)s
