Re-add jQuery output to the assets.yaml
Otherwise the Chrome extension doesn't get the jQuery file copied
into it's public folder. Also had to rename jQuery to include the
version string as Webassets will skip an asset entirely if the output
filename matches the content filename. This causes the embed.js loader
 to skip the loading of jQuery completely.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -145,8 +145,9 @@ angular_tags_input:
 
 # jQuery
 jquery:
+  output: scripts/vendor/jquery.min.js
   contents:
-    - h:static/scripts/vendor/jquery.min.js
+    - h:static/scripts/vendor/jquery-1.10.2.min.js
 jquery_scrollintoview:
   filters: uglifyjs
   output: scripts/vendor/jquery.scrollintoview.min.js
