Re-add jQuery output to the assets.yaml
Otherwise the Chrome extension doesn't get the jQuery file copied
into it's public folder.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -145,6 +145,7 @@ angular_tags_input:
 
 # jQuery
 jquery:
+  output: scripts/vendor/jquery.min.js
   contents:
     - h:static/scripts/vendor/jquery.min.js
 jquery_scrollintoview:
