Provide a default browser action icon
This prevents flashing when the extension is reloaded and refreshed.

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -38,7 +38,10 @@
     ]
   },
   "browser_action": {
-    "placeholder": "work around http://crbug.com/86449"
+    "default_icon": {
+      "19": "images/browser-icon-inactive.png",
+      "38": "images/browser-icon-inactive@2x.png"
+    }
   },
   "web_accessible_resources": [
     "public/*",
