--- a/development.ini
+++ b/development.ini
@@ -3,6 +3,10 @@ use: egg:h
 
 api.key: 00000000-0000-0000-0000-000000000000
 
+# Don't create/update indices and mappings by default. You will need to
+# uncomment this if running multiple web workers.
+#basemodel.should_create_all = False
+
 es.host: http://localhost:9200
 
 h.feature.streamer: True
