--- a/production.ini
+++ b/production.ini
@@ -18,6 +18,9 @@ api.key: 00000000-0000-0000-0000-000000000000
 #auth.local.authorization: /oauth/authorize
 #auth.local.token: /oauth/token
 
+# Don't create/update indices and mappings by default
+basemodel.should_create_all = False
+
 # ElasticSearch configuration
 #es.host: http://localhost:9200
 #es.index: annotator
