queue: Make queue implementation swappable
This commit makes it possible to swap out the queue implementation for
anything satisfying h.queue.interfaces.IQueueHelper, i.e. providing a
"get_reader" and "get_writer" methods.

--- a/development.ini
+++ b/development.ini
@@ -26,6 +26,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
+    h.queue.nsq
     h
     pyramid_basemodel
     pyramid_debugtoolbar
