--- a/production.ini
+++ b/production.ini
@@ -48,6 +48,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
+    h.queue.nsq
     h
     pyramid_basemodel
     pyramid_mailer
