--- a/development.ini
+++ b/development.ini
@@ -26,7 +26,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
-    h.queue.nsq
+    h.queue.local
     h
     pyramid_basemodel
     pyramid_debugtoolbar
