Sticky privacy on the browser
Add angular-cache. The privacy directive gets a new attribute,
'privacy-default', which can be set to "false" to override the
default, stored privacy preference. Any other value or the absence
of the tag indicates that the privacy should default to whatever
value is stored. The stored value is changed whenever the user
explicitly sets the privacy level.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -121,6 +121,11 @@ angular_bootstrap:
   output: scripts/vendor/angular-bootstrap.min.js
   contents:
     - h:static/scripts/vendor/angular-bootstrap.js
+angular_cache:
+  filters: uglifyjs
+  output: scripts/vendor/angular-cache.min.js
+  contents:
+    - h:static/scripts/vendor/angular-cache.js
 angular_resource:
   filters: uglifyjs
   output: scripts/vendor/angular-resource.min.js
@@ -233,6 +238,7 @@ app:
 app_js:
   output: scripts/app.min.js
   contents:
+    - angular_cache
     - angular_tags_input
     - gettext
     - annotator
