Switch to ws4py
Since pyramid_sockjs seems pretty unmaintained, having fallen behind
gevent-websocket quite a bit, and there don't seem to be any actively
maintained pyramid websocket integration libraries, switch to using
ws4py directly.

This change drops support for non-native websockets. As a result, we
have to do our own JSON decoding of the messages.

We also switch to a `gevent.pywsgi` based worker of our own. This
worker combines the gevent_pywsgi worker from Gunicorn with the
gevent helpers from ws4py that cleanly shutdown sockets on server
termination.

--- a/development.ini
+++ b/development.ini
@@ -52,11 +52,12 @@ webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
 ;http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
 debugtoolbar.show_on_exc_only: True
 
+
 [server:main]
 use: egg:gunicorn
 host: localhost
 port: 5000
-worker_class: gevent
+worker_class: h.server.Worker
 graceful_timeout: 0
 errorlog: -
 reload: True
