--- a/production.ini
+++ b/production.ini
@@ -1,5 +1,6 @@
 [app:main]
 use: egg:h
+filter-with: proxy-prefix
 
 # API configuration
 #
@@ -85,9 +86,13 @@ webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
 webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
 
 
+[filter:proxy-prefix]
+use: egg:PasteDeploy#prefix
+
+
 [server:main]
 use: egg:gunicorn
-worker_class: gevent
+worker_class: h.server.Worker
 
 
 [loggers]
