Turn on streamer, use local queue
Until we deploy nsq, use the local queue. Use the streamer or else
the stream doesn't work at all.

--- a/production.ini
+++ b/production.ini
@@ -19,14 +19,14 @@ api.key: 00000000-0000-0000-0000-000000000000
 #auth.local.token: /oauth/token
 
 # Don't create/update indices and mappings by default
-basemodel.should_create_all = False
+basemodel.should_create_all: False
 
 # ElasticSearch configuration
 #es.host: http://localhost:9200
 #es.index: annotator
 
 # Feature flags
-h.feature.streamer = False
+h.feature.streamer: True
 
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
@@ -48,7 +48,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
-    h.queue.nsq
+    h.queue.local
     h
     pyramid_basemodel
     pyramid_mailer
