--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -264,6 +264,7 @@ app_js:
             - h:static/scripts/filters.coffee
             - h:static/scripts/searchfilters.coffee
             - h:static/scripts/services.coffee
+            - h:static/scripts/services/*.coffee
             - h:static/scripts/socket.coffee
             - h:static/scripts/streamsearch.coffee
             - h:static/scripts/*-service.coffee
