Implement one click unsubscribe
This allows users to update their notification settings without having
to be logged in.

--- a/development.ini
+++ b/development.ini
@@ -10,6 +10,7 @@ es.host: http://localhost:9200
 h.feature.api: True
 h.feature.streamer: True
 h.feature.notification: False
+h.notification.secret: secret
 
 horus.allow_email_auth: True
 horus.autologin: True
@@ -27,6 +28,7 @@ pyramid.includes:
     h.accounts
     h.queue.local
     h.session
+    h.notification
     pyramid_basemodel
     pyramid_debugtoolbar
     pyramid_mailer
