Updated content security policy.
Modified the content security policy to allow getting MathJax resources from cdn.mathjax.org and downloading KaTex fonts for rendering math.

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -21,7 +21,7 @@
     "tabs"
   ],
   "content_security_policy":
-    "script-src 'self' 'unsafe-eval' {{ src }}; object-src 'self'",
+    "script-src 'self' 'unsafe-eval' {{ src }} https://cdn.mathjax.org; object-src 'self'; font-src 'self';",
 
   "background": {
     "persistent": true,
