--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -21,7 +21,7 @@
     "tabs"
   ],
   "content_security_policy":
-    "script-src 'self' 'unsafe-eval' {{ src }} https://cdn.mathjax.org; object-src 'self'; font-src 'self';",
+    "script-src 'self' 'unsafe-eval' {{ src }} https://cdn.mathjax.org; object-src 'self'; font-src 'self' data:;",
 
   "background": {
     "persistent": true,
