Load pyramid_multiauth before pyramid_basemodel
Here's a thing I think I broke somehow with recent commits shuffling
about the __init__.py and app.py modules.

We must make sure pyramid_basemodel is loaded after the modules that
set up the models.

In our case, the local auth models need to be loaded.

--- a/development.ini
+++ b/development.ini
@@ -27,6 +27,7 @@ pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
     h.queue.local
+    pyramid_multiauth
     pyramid_basemodel
     pyramid_debugtoolbar
     pyramid_mailer
