--- a/production.ini
+++ b/production.ini
@@ -49,6 +49,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
     h.queue.local
+    pyramid_multiauth
     pyramid_basemodel
     pyramid_mailer
     pyramid_redis_sessions
