Put the API behind a feature flag

--- a/production.ini
+++ b/production.ini
@@ -26,6 +26,7 @@ basemodel.should_create_all: False
 #es.index: annotator
 
 # Feature flags
+h.feature.api: True
 h.feature.streamer: True
 
 # User and group framework settings -- see horus documentation
