--- a/development.ini
+++ b/development.ini
@@ -9,6 +9,7 @@ api.key: 00000000-0000-0000-0000-000000000000
 
 es.host: http://localhost:9200
 
+h.feature.api: True
 h.feature.streamer: True
 
 horus.allow_email_auth: True
