--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -384,6 +384,7 @@ inject_css:
       output: styles/inject.css
       contents:
         - h:static/styles/inject.scss
+        - h:static/styles/pdfjs-overrides.scss
       depends:
         - h:static/styles/base.scss
         - h:static/styles/bucket-bar.scss
