development.ini: Add a development-mode session secret
Logging in every time the server reloads was getting tedious.

--- a/development.ini
+++ b/development.ini
@@ -35,6 +35,10 @@ pyramid.includes:
     pyramid_tm
     h.testing
 
+# Set a default persistent secret for development. DO NOT copy this into a
+# production settings file.
+session.secret: notverysecretafterall
+
 sqlalchemy.url: sqlite:///h.db
 
 jinja2.extensions: h.jinja_extensions:IncludeRawExtension
