Replace Katex with a non minified version (0.1.1)

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -237,7 +237,7 @@ app_js:
     - uuid
     - angular_tags_input
     - gettext
-    - h:static/scripts/vendor/katex/katex.min.js
+    - h:static/scripts/vendor/katex/katex.js
     - annotator
     - annotator_auth
     - annotator_bridge
