Use an unminified version of jQuery 1.11.1

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -145,9 +145,10 @@ angular_tags_input:
 
 # jQuery
 jquery:
+  filters: uglifyjs
   output: scripts/vendor/jquery.min.js
   contents:
-    - h:static/scripts/vendor/jquery-1.10.2.min.js
+    - h:static/scripts/vendor/jquery.js
 jquery_scrollintoview:
   filters: uglifyjs
   output: scripts/vendor/jquery.scrollintoview.min.js
