Get non-minified assets output for production

--- a/development.ini
+++ b/development.ini
@@ -46,7 +46,7 @@ jinja2.extensions: h.jinja_extensions:IncludeRawExtension
 webassets.base_dir: h:static
 webassets.base_url: assets
 webassets.coffee_no_bare: True
-webassets.debug: True
+webassets.debug: False
 webassets.manifest: False
 webassets.static_view: True
 webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
