Add a hassets.minify setting
This will pass JavaScript through uglifyjs and CSS through cleancss
filters when the flag is set to True. This allows us to bundle
non-minified code in the Firefox extension and minified code in
both production and the Chrome extension.

--- a/production.ini
+++ b/production.ini
@@ -85,6 +85,9 @@ webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
 webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
 webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
 
+# Application specific asset settings.
+hassets.minify: True
+
 
 [filter:proxy-prefix]
 use: egg:PasteDeploy#prefix
