--- a/development.ini
+++ b/development.ini
@@ -53,6 +53,9 @@ webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
 webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
 webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
 
+# Application specific asset settings.
+hassets.minify: True
+
 ;http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
 debugtoolbar.show_on_exc_only: True
 
