Put notificiations behind a feature flag
And only show the notifications panel for account settings when it is turned on

Fix #1762

--- a/development.ini
+++ b/development.ini
@@ -11,6 +11,7 @@ es.host: http://localhost:9200
 
 h.feature.api: True
 h.feature.streamer: True
+h.feature.notification: False
 
 horus.allow_email_auth: True
 horus.autologin: True
