--- a/production.ini
+++ b/production.ini
@@ -29,6 +29,7 @@ basemodel.should_create_all: False
 # Feature flags
 h.feature.api: True
 h.feature.streamer: True
+h.feature.notification: False
 
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
