Shorten the name of the Hypothesis Chrome extension
There is a hard limit of 45 characters. Also added the short_name
field without the tag line.

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -1,5 +1,6 @@
 {
-  "name": "Hypothesis - Collaborative Web and PDF Annotation",
+  "name": "Hypothesis - Web & PDF Annotation",
+  "short_name": "Hypothesis",
   "version": "{{ version }}",
   "manifest_version": 2,
 
