--- a/production.ini
+++ b/production.ini
@@ -78,7 +78,7 @@ jinja2.extensions: h.jinja_extensions:IncludeRawExtension
 #   webassets.base_url: https://static.example.com
 webassets.base_dir: h:static
 webassets.base_url: assets
-webassets.cache_max_age: 86400
+webassets.cache_max_age: 31536000
 webassets.coffee_no_bare: True
 webassets.static_view: True
 webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
