--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -291,6 +291,7 @@ app_css:
           - h:static/styles/tags-input.scss
           - h:static/styles/page.scss
           - h:static/styles/help-page.scss
+          - h:static/styles/variables.scss
 
 
 account:
@@ -389,6 +390,7 @@ inject_css:
         - h:static/styles/base.scss
         - h:static/styles/bucket-bar.scss
         - h:static/styles/reset.scss
+        - h:static/styles/variables.scss
         - h:static/styles/mixins/icons.scss
 
 
@@ -402,4 +404,5 @@ topbar:
         - h:static/styles/topbar.scss
       depends:
         - h:static/styles/base.scss
+        - h:static/styles/variables.scss
         - h:static/styles/mixins/responsive.scss
