--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -391,6 +391,7 @@ inject_css:
         - h:static/styles/bucket-bar.scss
         - h:static/styles/reset.scss
         - h:static/styles/variables.scss
+        - h:static/styles/mixins/highlight.scss
         - h:static/styles/mixins/icons.scss
 
 
