Remove sass version pin
3.4.7 fixed the issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,7 @@ before_install:
   - sudo /usr/share/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-analysis-icu/2.3.0
   - sudo service elasticsearch restart
 install:
-  # Install temporarily pinned to avoid a regression in sass==3.4.6
-  #
-  #   https://github.com/sass/sass/issues/1476
-  - gem install sass:3.4.5
+  - gem install sass
   - gem install compass
   - pip install prospector
   - make
