Implement a Browserify webassets filter

--- a/development.ini
+++ b/development.ini
@@ -47,13 +47,12 @@ jinja2.extensions: h.jinja_extensions:IncludeRawExtension
 
 webassets.base_dir: h:static
 webassets.base_url: assets
-webassets.coffee_no_bare: True
 webassets.debug: True
 webassets.manifest: False
 webassets.static_view: True
 webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
 webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
-webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
+webassets.browserify_pipe_bin: %(here)s/tools/browserify-pipe
 
 ;http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
 debugtoolbar.show_on_exc_only: True
