--- a/production.ini
+++ b/production.ini
@@ -66,11 +66,10 @@ jinja2.extensions: h.jinja_extensions:IncludeRawExtension
 webassets.base_dir: h:static
 webassets.base_url: assets
 webassets.cache_max_age: 31536000
-webassets.coffee_no_bare: True
 webassets.static_view: True
 webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
 webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
-webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
+webassets.browserify_pipe_bin: %(here)s/tools/browserify-pipe
 
 
 [filter:proxy-prefix]
