--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -233,6 +233,7 @@ app_js:
             - h:static/scripts/filters.coffee
             - h:static/scripts/searchfilters.coffee
             - h:static/scripts/services.coffee
+            - h:static/scripts/services/*.coffee
             - h:static/scripts/*-service.coffee
             - h:static/scripts/streamsearch.coffee
 
